<resources>
    <string name="app_name">Fulora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pular">Pular</string>
    <string name="proximo">Próximo</string>
    <string name="onboarding_step_one_title">Nunca mais deixe as suas plantinhas morrerem</string>
    <string name="onboarding_step_one_subtitle">Tudo o que você precisa para cuidar de todas as suas plantas</string>
    <string name="onboarding_step_two_title">Encontre as plantas que você vai cuidar no nosso catálogo</string>
    <string name="onboarding_step_two_subtitle">Adicione à sua lista e saiba mais sobre as caracteristicas de cada uma</string>
    <string name="onboarding_step_three_title">Seja avisado de todos os cuidados</string>
    <string name="onboarding_step_three_subtitle">É só cadastrar o melhor horário para ser sempre lembrado</string>
    <string name="voltar">Voltar</string>
    <string name="comecar">Começar</string>
    <string name="empty_text_plantation">Você não tem nada cadastrado ainda. Que tal adicionar?</string>
    <string name="criar_conta">Criar conta</string>
    <string name="access_account">Acessar conta</string>
    <string name="access">Acessar</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="ou">OU</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="error_name">Nome errado</string>
    <string name="error_email">E-mail errado</string>
    <string name="error_password">Senha errada</string>
    <string name="text_access_account">Já tem uma conta? <font fgcolor='#5B78AD'><u>Acessar conta.</u></font></string>
    <string name="text_create_account">Não tem uma conta? <font fgcolor='#5B78AD'><u>Criar conta.</u></font></string>
    <string name="title_activity_not_logged">NotLoggedActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_logged">LoggedActivity</string>
    <string name="user_or_password_invalid">Usuário ou senha inválidos</string>
    <string name="requisition_not_created">Requisição não criada</string>
</resources>