<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp"
        tools:context=".ui.offline.sign_in.SignInActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/criar_conta"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_sign_up">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_33sdp"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nome_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:inputType="textPersonName|textCapWords"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/input_name"
                    app:layout_constraintTop_toBottomOf="@+id/input_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/input_email"
                    app:layout_constraintTop_toBottomOf="@+id/input_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:singleLine="true"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_53sdp"
                    android:background="@drawable/ic_button_create_account"
                    android:text="@string/criar_conta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_senha" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/text_more_options"
                    app:layout_constraintEnd_toStartOf="@+id/text_more_options"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_more_options" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/text_more_options"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/text_more_options"
                    app:layout_constraintTop_toTopOf="@+id/text_more_options" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_more_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/ou"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toStartOf="@+id/view2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@id/button_create_account" />

                <LinearLayout
                    android:id="@+id/button_create_account_facebook"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:background="@drawable/ic_button_facebook"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toStartOf="@+id/button_create_account_google"
                    app:layout_constraintStart_toStartOf="@+id/input_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_more_options">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_facebook"
                        android:contentDescription="@string/facebook" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/facebook"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_create_account_google"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/ic_button_google"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/input_name"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/button_create_account_facebook"
                    app:layout_constraintTop_toTopOf="@+id/button_create_account_facebook">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        app:srcCompat="@drawable/ic_google"
                        android:contentDescription="@string/google" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/google"
                        android:textColor="@color/white" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_27sdp"
                    android:text="@string/text_access_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="@id/button_create_account_google"
                    app:layout_constraintStart_toStartOf="@id/button_create_account_facebook"
                    app:layout_constraintTop_toBottomOf="@id/button_create_account_facebook" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>